--- a/package.json
+++ b/package.json
@@ -6,7 +6,15 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "keywords": [],
-  "author": "",
+  "keywords": [
+    "modal",
+    "vanilla modal",
+    "dependecy free modal"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/joshborup/vanillapop.js"
+  },
+  "author": "josh borup",
   "license": "ISC"
 }
